--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ colorama==0.4.4
 Flask==2.1.2
 Flask-Login==0.6.1
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mysql-connector-python==8.0.29
+packaging==21.3
+Pillow==9.1.1
 protobuf==3.20.1
+pyparsing==3.0.9
+pytesseract==0.3.9
 python-dotenv==0.20.0
 Werkzeug==2.1.2
 WTForms==3.0.1
